--- a/package.json
+++ b/package.json
@@ -1,33 +1,41 @@
 {
   "name": "remote-pc",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "description": "Remote pc control",
+  "main": "Src/index.js",
   "scripts": {
     "start": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "ts:build": "tsc",
+    "ts:watch": "tsc -w",
+    "rebuild": "npm rebuild --runtime=electron --target=11.0.3 --disturl=https://atom.io/download/atom-shell --abi=85"
   },
   "author": "vovencia",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.10",
+    "@types/body-parser": "^1.19.0",
+    "@types/electron": "^1.6.10",
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "@types/express": "^4.17.9",
-    "@types/node": "^14.14.10",
-    "electron": "^11.0.3",
-    "express": "^4.17.1",
-    "robotjs": "^0.6.0",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.0",
-    "typescript": "^4.1.2"
+    "electron": "^11.0.3",
+    "typescript": "^4.1.2",
+    "electron-reload": "^1.5.0",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "dependencies": {
-    "@types/electron": "^1.6.10",
-    "electron-squirrel-startup": "^1.0.0"
+    "express": "^4.17.1",
+    "robotjs": "^0.6.0",
+    "body-parser": "^1.19.0",
+    "ip": "^1.1.5"
   },
   "config": {
     "forge": {
